<resources>
    <string name="app_name">GithubTestApp</string>

    <string name="rep_name">rep name</string>
    <string name="rep_language">rep language</string>
    <string name="rep_description">rep description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sign_in_button">SIGN IN</string>
    <string name="token_string">Personal access token</string>
    <string name="github_logo">Github logo</string>
    
    <string name="rep_link">Rep Link</string>
    <string name="rep_license">Rep License</string>
    <string name="rep_stars">Stars</string>
    <string name="rep_forks">Forks</string>
    <string name="rep_watchers">Watchers</string>
    <string name="rep_readme">Readme</string>
</resources>