<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/repName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rep_name"
                android:textColor="#2196F3"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/repLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/rep_language"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/repDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rep_description"
            android:textSize="20sp" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>